src/core/p4est_utils.hpp

/** Struct containing information to adjust p4est behavior */
typedef struct {
  /** minimum required grid level */
  int min_ref_level;
  /** maximum allowed grid level */
  int max_ref_level;

  /** partitioning strategy:
   * allowed values are "n_cells" and "subcycling".
   * n_cells will assign each cell a weight of 1 while subcycling will assign
   * each cell the weight 2**(level - min(level)). */
  std::string partitioning;

  /** Relative threshold values for dynamic adaptivity.  The first value gives a
   * lower bound.  If the current cells value (v < first_value * max_value) the
   * cell will be marked for coarsening.  If the current cells value
   * (v > second_value * max_value) it will be marked for refinement.
   * Default values are 0 and 1, such that all criteria have to be enabled
   * manually by the user. */
#ifdef LB_ADAPTIVE
  /** velocity */
  double threshold_velocity[2];
  /** vorticity */
  double threshold_vorticity[2];
#endif // LB_ADAPTIVE
} p4est_parameters;
extern p4est_parameters p4est_params;
inline int p4est_utils_set_min_level(int lvl) {
  p4est_params.min_ref_level = lvl;
  mpi_call(mpi_set_min_level, -1, lvl);
  return 0;
}
/** Get min level from p4est actor */
inline int p4est_utils_get_min_level(int *lvl) {
  *lvl = p4est_params.min_ref_level;
  return 0;
}
/** Set max level from p4est actor */
inline int p4est_utils_set_max_level(int lvl) {
  p4est_params.max_ref_level = lvl;
  mpi_call(mpi_set_max_level, -1, lvl);
  return 0;
}
/** Get max level from p4est actor */
inline int p4est_utils_get_max_level(int *lvl) {
  *lvl = p4est_params.max_ref_level;
  return 0;
}
/** Set partitioning strategy from p4est actor */
inline int p4est_utils_set_partitioning(std::string part) {
  if (!strcmp(part.data(), "n_cells") || !strcmp(part.data(), "subcycling")) {
    p4est_params.partitioning.assign(part);
    mpi_call(mpi_set_partitioning, -1, 0);
    mpi_set_partitioning(0, 0);
    return 0;
  }
  else {
    return -1;
  }
}
/** Get partitioning strategy from p4est actor */
inline int p4est_utils_get_partitioning(std::string *part) {
  part->assign(p4est_params.partitioning.data());
  return 0;
}
/** Set velocity threshold values for dynamic grid change */
inline int p4est_utils_set_threshold_velocity(double *thresh) {
#ifdef LB_ADAPTIVE
  memcpy(p4est_params.threshold_velocity, thresh, 2 * sizeof(double));
  mpi_call(mpi_bcast_thresh_vel,-1, -1);
  mpi_bcast_thresh_vel(0, 0);
#endif // LB_ADAPTIVE
  return 0;
}
/** Get velocity threshold values for dynamic grid change */
inline int p4est_utils_get_threshold_velocity(double *thresh) {
#ifdef LB_ADAPTIVE
  for (int i = 0; i < 2; ++i)
    thresh[i] = p4est_params.threshold_velocity[i];
#endif // LB_ADAPTIVE
  return 0;
}
/** Set vorticity threshold values for dynamic grid change */
inline int p4est_utils_set_threshold_vorticity(double *thresh) {
#ifdef LB_ADAPTIVE
  memcpy(p4est_params.threshold_vorticity, thresh, 2 * sizeof(double));
  mpi_call(mpi_bcast_thresh_vort,-1, -1);
  mpi_bcast_thresh_vort(0, 0);
#endif // LB_ADAPTIVE
  return 0;
}
/** Get vorticity threshold values for dynamic grid change */
inline int p4est_utils_get_threshold_vorticity(double *thresh) {
#ifdef LB_ADAPTIVE
  for (int i = 0; i < 2; ++i)
    thresh[i] = p4est_params.threshold_vorticity[i];
#endif // LB_ADAPTIVE
  return 0;
}
/** Perform uniform grid refinement ref_step times */
inline int p4est_utils_uniform_refinement(int ref_steps) {
  mpi_call(mpi_unif_refinement, -1, ref_steps);
  mpi_unif_refinement(0, ref_steps);
  return 0;
}
/** Perform random grid refinement ref_step times */
inline int p4est_utils_random_refinement(int ref_steps) {
  mpi_call(mpi_rand_refinement, -1, ref_steps);
  mpi_rand_refinement(0, ref_steps);
  return 0;
}
/** Perform regional coarsening within given bounding box coordinates */
inline int p4est_utils_regional_coarsening(double *bb_coords) {
  memcpy(coords_for_regional_refinement, bb_coords, 6 * sizeof(double));
  mpi_call(mpi_bcast_parameters_for_regional_refinement, -1, 0);
  mpi_bcast_parameters_for_regional_refinement(0, 0);
  mpi_call(mpi_reg_coarsening, -1, 0);
  mpi_reg_coarsening(0, 0);
  return 0;
}
/** Perform regional refinement within given bounding box coordinates */
inline int p4est_utils_regional_refinement(double *bb_coords) {
  memcpy(coords_for_regional_refinement, bb_coords, 6 * sizeof(double));
  mpi_call(mpi_bcast_parameters_for_regional_refinement, -1, 0);
  mpi_bcast_parameters_for_regional_refinement(0, 0);
  mpi_call(mpi_reg_refinement, -1, 0);
  mpi_reg_refinement(0, 0);
  return 0;
}
/** Exclude a boundary index from geometric refinement or inverse geometric
 * refinement.
 */
inline int p4est_utils_geometric_refinement_exclude_boundary_index(int index) {
  mpi_call(mpi_exclude_boundary, -1, index);
  mpi_exclude_boundary(0, index);
  return 0;
}
/** Perform geometric refinement step, i.e. refine around boundaries. */
inline int p4est_utils_geometric_refinement() {
  mpi_call(mpi_geometric_refinement, -1, 0);
  mpi_geometric_refinement(0, 0);
  return 0;
}
/** Perform inverse geometric refinement step, i.e. refine everywhere but around
 * boundaries.
 */
inline int p4est_utils_inverse_geometric_refinement() {
  mpi_call(mpi_inv_geometric_refinement, -1, 0);
  mpi_inv_geometric_refinement(0, 0);
  return 0;
}
/** Trigger dynamic grid adaptation. */
inline int p4est_utils_adapt_grid() {
  if (p4est_params.min_ref_level < p4est_params.max_ref_level) {
    mpi_call(mpi_adapt_grid, -1, 0);
    mpi_adapt_grid(0, 0);
  }
  return 0;
}